# ComfyUI_ObjectClear

./: LICENSE  ObjectClear_node.py  README.md  __init__.py  inference_objectclear.py  node_utils.py  pyproject.toml  requirements.txt
example_workflows/: obj.json
hugging_face/: app.py  requirements.txt
objectclear/pipelines/: pipeline_objectclear.py  pipeline_objectclear_.py
sdxl_repo/: model_index.json
sdxl_repo/image_prompt_encoder/: config.json
sdxl_repo/postfuse_module/: config.json
sdxl_repo/text_encoder/: config.json
sdxl_repo/text_encoder_2/: config.json
sdxl_repo/unet/: config.json
sdxl_repo/vae/: config.json
